<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="author_name">- Nathan</string>
    <string name="app_name">PoPo</string>
    <string name="action_settings">退出登录</string>
    <string name="hello_world">Hello world!</string>
    <string name="my_apps">MY APPS</string>
    <string name="loading_anim">LOADING&#8230;</string>
    <string name="write_someting">写下你的感想……</string>
    <string name="recommend">相关推荐</string>
    <string name="pull_to_refresh_pull_label">下拉刷新…</string>
    <string name="pull_to_refresh_release_label">松手刷新…</string>
    <string name="pull_to_refresh_refreshing_label">载入中…</string>
    <string name="pull_to_refresh_done_label">刷新完毕</string>

    <item name="water_position" type="id"></item>
    <item name="music_flag" type="id"></item>

    <string name="download">下载</string>
    <string name="share">分享</string>
    <string name="favorite">喜欢</string>
    <string name="pic_square_like">喜欢</string>
    <string name="load">LOAD</string>
    <string name="ablum_1">美女</string>
    <string name="ablum_2">明星</string>
    <string name="ablum_3">搞笑</string>
    <string name="ablum_4">动漫</string>
    <string name="ablum_5">影视</string>
    <string name="ablum_6">壁纸</string>
    <string name="no_internet">网络故障，请检查你的网络</string>
    <string name="generic_server_down">网络不给力，请求超时</string>
    <string name="generic_error">服务器脑瘫了</string>
    <string name="json_error">解析出问题了</string>
    <string name="icon_comment">评论</string>
    <string name="icon_forward">转发</string>
    <string name="icon_collect">收藏</string>
    <string name="register_text">注册</string>
    <string name="login_text">登录</string>
    <string name="login_sentence_1">Whatever is worth doing is worth doing well</string>
    <string name="login_sentence_2">The hard part isn’t making the decision. It’s living with it</string>
    <string name="login_sentence_3">If you love the life you live,you will live a life of love</string>
    
    <string name="menu_1">P</string>
    <string name="menu_2">O</string>

</resources>