<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="44.0dip"
            android:background="@color/white_title" >

            <TextView
                android:id="@+id/tab_title_1"
                style="@style/title_bar_text"
                android:text="@string/ablum_1" />

            <TextView
                android:id="@+id/tab_title_2"
                style="@style/title_bar_text"
                android:text="@string/ablum_2" />

            <TextView
                android:id="@+id/tab_title_3"
                style="@style/title_bar_text"
                android:text="@string/ablum_3" />

            <TextView
                android:id="@+id/tab_title_4"
                style="@style/title_bar_text"
                android:text="@string/ablum_4" />

            <TextView
                android:id="@+id/tab_title_5"
                style="@style/title_bar_text"
                android:text="@string/ablum_5" />

            <TextView
                android:id="@+id/tab_title_6"
                style="@style/title_bar_text"
                android:text="@string/ablum_6" />
        </LinearLayout>
    </HorizontalScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <FrameLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
        </FrameLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@drawable/bg_pic_square_shadow" />
    </RelativeLayout>

</LinearLayout>